# mfpg

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  improvement.md
.github/workflows/: badge.yml  cmake-single-platform.yml  cmake-wf-multi.yml  cmake-wf.yml  del.yml  delete.yml  deploy.yml  merge-ubuntu.yml  merge-windows.yml  merge.yml  pages.yml  test.yml  ubuntu-build.yml  ubuntu-tests.yml  ubuntu.yml  ver.yml  wf-build.yml  wf-main.yml  wf-tests.yml  windows.yml  wxw-u.yml  wxw.yml
cmake_files/: conf_cmake.h.in  system_tests_A_D_o_F_one.cmake  system_tests_A_D_o_F_two.cmake  system_tests_A_W_one.cmake  system_tests_A_W_two.cmake
conf/: system_tests_A_W_one.cmake
libs/mx/Sourcecode/private/mxtest/file/: PathRoot.h
resources/: A_D_o_F.xml  A_W.xml
resources/csv_files/: FullNoteMapperViolin.csv
resources/csv_note_map_builder/: Builder.cpp  Builder.h  CSVNoteMapGenerator.cpp  CSV_Gen  Makefile  README.md
resources/docs/: Layers.dia
resources/docs/html_guide/: cliguide.html  dslguide.html  guiguide.html  notemapbuilder.html
resources/docs/images/: Icon.xcf
resources/docs/md_guides/: CLI_Guide.md  CSV_Builder.md  DSL_Guide.md  Examples.md  GUI_Guide.md
resources/dsl_files/: DSL_guide.md  DSL_test_configuration_1.mfpg  DSL_test_configuration_1_with_defs.mfpg  DSL_test_configuration_1_with_defs_double.mfpg  DSL_test_configuration_defs.mfpg  DSL_test_configuration_fewer_attr_one.mfpg  DSL_test_configuration_fewer_attr_two.mfpg
resources/tests/: A_D_o_F_two.csv  A_W.csv  A_W_two.csv
resources/xrc/: resources.xrc
src/: Action.cpp  Action.h  ActionBuilder.cpp  ActionBuilder.h  ActionSet.cpp  ActionSet.h  AttrException.cpp  AttrException.h  BasicHPSolver.cpp  BasicHPSolver.h  BasicNoteMapper.cpp  BasicNoteMapper.h  CMakeLists.txt  CSVNoteMapper.cpp  CSVNoteMapper.h  ConversionException.cpp  ConversionException.h  ExValContainer.cpp  ExValContainer.h  ExValException.cpp  ExValException.h  GraphSolver.h  GreedySolver.cpp  GreedySolver.h  HPGraphBuilder.h  HPSolver.h  HandPosition.cpp  HandPosition.h  IString.cpp  IString.h  Instrument.cpp  Instrument.h  InstrumentBuilder.cpp  InstrumentBuilder.h  Layer.cpp  Layer.h  LayerList.cpp  LayerList.h  LayerListException.h  LinkException.cpp  (+32 more)
src/gui/: Gui_Settings.cpp  Gui_Settings.h  MFPG_AdvFrame.cpp  MFPG_AdvFrame.h  MFPG_Choicebook.cpp  MFPG_Choicebook.h  MFPG_Frame.cpp  MFPG_Frame.h  MFPG_Gui.cpp  MFPG_Gui.h  MFPG_Panel.cpp  MFPG_Panel.h  MFPG_Text.cpp  MFPG_Text.h  settings.def
src/parser/: Absyn.C  Absyn.H  ActionTest.cpp  Bison.H  Buffer.C  Lexer.C  Makefile  Parser.C  Parser.H  README.md  mfpg_dsl.cf
tests/: CMakeLists.txt  DSL_test.txt  DSL_test_comp.txt  tests.cpp
tests/cases/: Air.xml  Hush.xml
tests/cmake_scripts/: system_tests_A_D_o_F_one.cmake  system_tests_A_D_o_F_two.cmake  system_tests_A_W_one.cmake  system_tests_A_W_sps_two.cmake  system_tests_A_W_tls.cmake  system_tests_A_W_two.cmake  system_tests_Air_lines.cmake  system_tests_Air_notes.cmake  system_tests_CSV_BasicNoteMapper.cmake  system_tests_DSL_defs.cmake  system_tests_DSL_one.cmake  system_tests_DSL_one_with_defs.cmake  system_tests_DSL_one_with_defs_double.cmake  system_tests_fewer_attr_one.cmake  system_tests_fewer_attr_two.cmake
tests/outputs/: A_D_o_F.csv  A_D_o_F_defs.csv  A_D_o_F_fewer_attr_one.csv  A_D_o_F_fewer_attr_two.csv  A_D_o_F_two.csv  A_W.csv  A_W_defs.csv  A_W_fewer_attr_one.csv  A_W_fewer_attr_two.csv  A_W_sps_two.csv  A_W_tls_one.csv  A_W_tls_two.csv  A_W_two.csv  Air_notes_v1.csv  Air_notes_v2.csv
webdocs/: guide.html  index.html  scripts.js  styles.css
webdocs/files/: A_W.xml  A_W_final_test.csv  SimpleExampleDSL.mfpg
webdocs/guides/: cliguide.html  dslguide.html  example-easy.html  examples.html  guidebase.html  guiguide.html  index.html  notemapbuilder.html  styles.css
webdocs/guides/html_guides/: CLI_Guide.html  DSL_Guide.html  NMB_Guide.html
webdocs/info/: faq.html  index.html
webdocs/info/patch-notes/: index.html  patch-0-1.html
webdocs/links/: index.html
webdocs/mfpg/: index.html  scripts.js  styles.css
webdocs/mfpg/files/: A_W_final_test.csv  A_W_first_test.csv  BasicDSL.mfpg  BasicNoteMapper.csv  SimpleExampleDSL.mfpg
webdocs/mfpg/guides/: cliguide.html  dslguide.html  example-easy.html  guiguide.html  index.html  notemapbuilder.html
webdocs/mfpg/info/: faq.html  index.html  issues.html  technical-information.html  upcoming-features.html
webdocs/mfpg/info/patch-notes/: index.html  patch-0-1.html
webdocs/mfpg/links/: index.html
webdocs/patch-notes/: index.html
