cmake_minimum_required(VERSION 3.17)

if(REBUILD_MX)
  target_link_libraries(mfpg mx cxxopts)
  if (BUILD_GUI)
    target_link_libraries(mfpg_gui mx cxxopts)
  endif()
else()
  if (UNIX)
    target_link_libraries(mfpg ${CMAKE_SOURCE_DIR}/deps/a/libmx.a cxxopts)
    if (BUILD_GUI)
      target_link_libraries(mfpg_gui ${CMAKE_SOURCE_DIR}/deps/a/libmx.a cxxopts)
    endif()
  elseif(MSVC)
    if (CMAKE_SIZEOF_VOID_P EQUAL 8)
     target_link_libraries(mfpg ${CMAKE_SOURCE_DIR}/deps/a/mx_64.lib cxxopts)
     if (BUILD_GUI)
       target_link_libraries(mfpg_gui ${CMAKE_SOURCE_DIR}/deps/a/mx_64.lib cxxopts)
     endif()
    elseif (CMAKE_SIZEOF_VOID_P EQUAL 4)
      target_link_libraries(mfpg ${CMAKE_SOURCE_DIR}/deps/a/mx_r.lib cxxopts)
      if (BUILD_GUI)
        target_link_libraries(mfpg_gui ${CMAKE_SOURCE_DIR}/deps/a/mx_r.lib cxxopts)
      endif()
    endif()
  endif()
endif()  

target_include_directories(mfpg 
	PRIVATE "${CMAKE_SOURCE_DIR}/deps/mx/Sourcecode/include/")
target_include_directories(mfpg 
	PRIVATE "${CMAKE_SOURCE_DIR}/src/parser/")
if (BUILD_GUI)
  target_include_directories(mfpg_gui
  	PRIVATE "${CMAKE_SOURCE_DIR}/deps/mx/Sourcecode/include/")
  target_include_directories(mfpg_gui 
	  PRIVATE "${CMAKE_SOURCE_DIR}/src/parser/")
  target_include_directories(mfpg_gui 
	  PRIVATE "${CMAKE_SOURCE_DIR}/src/")
endif()
